<resources>
    <string name="app_name">RideShare</string>
    <string name="sign_up">SIGN UP</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or">OR</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_to_get_started">SIGN UP TO GET STARTED</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ts_amp_cs"><![CDATA[Ts&Cs]]></string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept_ride">ACCEPT RIDE</string>
    <string name="how_it_works">How it Works</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="home">home</string>
    <string name="ntobeko_dindi">NTOBEKO DINDI</string>
    <string name="rideshare">RIDESHARE</string>
    <string name="daily_commute">daily commute</string>
    <string name="long_distance">long distance</string>
    <string name="todo">TODO</string>
    <string name="offer_a_ride">offer a ride</string>
    <string name="chats">chats</string>
    <string name="book_a_ride">book a ride</string>
    <string name="welcome">WELCOME</string>
    <string name="_continue">continue</string>
    <string name="_1_of_3">1 of 3</string>
    <string name="firstSlideTxt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="cell_phone_number">Cell-Phone Number</string>
    <string name="other">Other</string>
    <string name="back_to_login">back to login</string>
    <string name="female">Female</string>
    <string name="welcome_please_sign_in">Welcome Please sign in</string>
    <string name="first_slide_image">first slide image</string>
    <string name="welcome_to_friends_fragment">welcome to friends fragment</string>
    <string name="update">UPDATE</string>
    <string name="male">Male</string>
    <string name="unknown">UNKNOWN</string>
    <string name="phone_number">Phone Number</string>
    <string name="_12344">12344</string>
    <string name="update_profile">update profile</string>
    <string name="dummy">dummy</string>
    <string name="description">description</string>
    <string name="travel">travel</string>
    <string name="get_started">get started</string>
    <string name="_3_of_3">3 of 3</string>
    <string name="last_slide_picture">last slide picture</string>
    <string name="first_slide_picture">first slide picture</string>
    <string name="second_slide_picture">second slide picture</string>
    <string name="finalise">finalise</string>
    <string name="_2_of_3">2 of 3</string>
    <string name="main_fab">main fab</string>
    <string name="mini_fab">mini fab</string>
    <string name="create_group">CREATE GROUP</string>
    <string name="logout_caps">LOGOUT</string>
    <string name="join_group">JOIN GROUP</string>
    <string name="welcome_to_requests_fragment">welcome to requests fragment</string>
    <string name="beginning">Beginning</string>
    <string name="departure_date">Departure Date</string>
    <string name="destination">Destination</string>
    <string name="close_icon">close icon</string>
    <string name="welcome_to_chats_fragment">welcome to chats fragment</string>
    <string name="number_of_sits">Number of Sits</string>
    <string name="daily_travel">Daily Travel</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="price">Price</string>
    <string name="submit">submit</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="testingRecyclerview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="mthokozisi_dlamini">Mthokozisi Dlamini</string>
    <string name="_1h_ago">1h ago</string>
    <string name="message">MESSAGE</string>
    <string name="facebook_app_id">368528027548629</string>
    <string name="fb_login_protocol_scheme">fb368528027548629</string>
    <string name="registered_account_email">Enter your registered account email</string>
    <string name="cell_number">Cell Number</string>
    <string name="next">next</string>
    <string name="vehicle_details">VEHICLE DETAILS</string>
    <string name="millage">Millage</string>
    <string name="first_name2">First name</string>
    <string name="last_name2">Last name</string>
    <string name="date_of_birth2">Date of birth</string>
    <string name="colour">Colour</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="upload_images">UPLOAD IMAGES</string>
    <string name="license_plate_number">License plate number</string>
    <string name="like">LIKE</string>
    <string name="offer_ride">OFFER RIDE</string>
    <string name="share">SHARE</string>
    <string name="enter_the_otp">Enter the OTP to verify you phone number</string>
    <string name="verify">verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="_0">0%</string>
    <string name="phone_number_format">61707153</string>
    <string name="r0">R0</string>
    <string name="profits">profits</string>
    <string name="_0_">0</string>
    <string name="rides">rides</string>
    <string name="firstSlideTxtc">first create and count and start commuting with convenience</string>
</resources>