<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_box"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/privacy"
        android:title="@string/privacy_policy"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/how_it_works"
        android:title="@string/how_it_works"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/terms"
        android:title="@string/ts_amp_cs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/faq"
        android:title="@string/faq"
        app:showAsAction="never"/>

</menu>