<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/daily_commute_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/short_distance_sheet_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_baseline_black_close_24"
        android:contentDescription="@string/close_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-30dp"
        android:text="@string/daily_travel"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/short_distance_beginning"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_baseline_my_location_24"
        android:drawablePadding="10dp"
        android:hint="@string/beginning"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/short_distance_destination"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_baseline_flag_24"
        android:drawablePadding="10dp"
        android:hint="@string/destination"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/short_distance_number_of_sits"
        android:layout_width="270dp"
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_baseline_airline_seat_recline_normal_24"
        android:drawablePadding="10dp"
        android:hint="@string/number_of_sits"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/short_distance_start_date"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="10dp"
        android:hint="@string/starting_date"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:inputType="date"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/short_distance_end_date"
        android:layout_width="270dp"
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="10dp"
        android:hint="@string/ending_date"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:inputType="date"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/short_distance_price"
        android:layout_width="270dp"
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_baseline_money_24"
        android:drawablePadding="10dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_short_distance_submit_ride_offer"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:layout_gravity="center"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>